# store-django-pet

./: .gitignore  README.md  pyproject.toml
storepet/store/: apps.py  urls.py  views.py
storepet/store/admin/: __init__.py  categories.py  women.py
storepet/store/forms/: __init__.py  files.py  women.py
storepet/store/migrations/: 0001_initial.py  0002_alter_women_options_women_idx_women_time_created_and_more.py  0002_initial.py  0003_women_slug.py  0004_alter_women_slug.py  0005_categories.py  0006_categories_slug_women_category_and_more.py  0007_alter_women_category.py  0008_tagposts_alter_categories_name_alter_women_category_and_more.py  0009_husbands_women_husband.py  0010_alter_women_husband.py  0011_alter_husbands_options_alter_tagposts_options_and_more.py  0012_alter_categories_options_alter_husbands_options_and_more.py  0013_files.py  0014_women_photo.py  0015_women_author.py
storepet/store/models/: __init__.py  categories.py  files.py  husbands.py  tag_posts.py  women.py
storepet/store/services/: files.py
storepet/store/templates/: about.html  add_page.html  categories.html  index.html  post.html  posts.html  tags.html
storepet/store/templatetags/: tags.py
storepet/store/utils/: base_mappings.py  mixins.py
storepet/store/views/: __init__.py  methods.py  models.py  pages.py
storepet/storepet/: asgi.py  settings.py  urls.py  wsgi.py
storepet/templates/: base.html
storepet/templates/admin/: base_site.html
storepet/users/: auth.py  context_processors.py  forms.py  urls.py  views.py
storepet/users/migrations/: 0001_initial.py
(+11 files in other folders)
