[project]
name = "store-django-pet"
version = "0.1.0"
description = ""
authors = [
    {name = "airtoour",email = "artur.gips@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (==4.2.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
