[project]
name = "store-django-pet"
version = "0.1.0"
description = ""
authors = [
    {name = "airtoour",email = "artur.gips@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (==4.2.9)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "django-debug-toolbar (>=5.2.0,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "python-decouple (>=3.8,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
